syntax = "proto3";

package index;

service Index {
    rpc GetIndexes(GetIndexesRequest) returns (IndexResponce) {}
    rpc GetIndex(GetIndexRequest) returns (IndexResponce) {}
}

message GetIndexesRequest {
    optional bool include_system_schemas = 1;
    repeated string included_schemas = 2;
    repeated string excluded_schemas = 3;
    optional int32 limit = 4;
    optional int32 offset = 5;
}

message GetIndexRequest {
    string id = 1;
}

message IndexResponce {
    int32 id = 1;
    int32 table_id = 2;
    string schema = 3;
    int32 number_of_attributes = 4;
    int32 number_of_key_attributes = 5;
    bool is_unique = 6;
    bool is_primary = 7;
    bool is_exclusion = 8;
    bool is_immediate = 9;
    bool is_clustered = 10;
    bool is_valid = 11;
    bool check_xmin = 12;
    bool is_ready = 13;
    bool is_live = 14;
    bool is_replica_identity = 15;
    repeated int32 key_attributes = 16;
    repeated int32 collation = 17;
    repeated int32 class = 18;
    repeated int32 options = 19;
    optional string index_predicate = 20;
    optional string comment = 21;
    string index_definition = 22;
    string access_method = 23;
    repeated IndexAttribute index_attributes = 24;
}

message IndexAttribute {
    int32 attribute_number = 1;
    string attribute_name = 2;
    string data_type = 3;
}
